css/guardianc.css
body {
  margin: 0;
  font-family: 'Segoe UI', 'Trebuchet MS', serif;
  font-size: 13px;
  line-height: 18px;
  color: #111;
}

.clearfix:after {
  display: block;
  height: 0;
  clear: both;
  font-size: 0;
  content: ".";
  visibility: hidden;
}

.container {
  width: 1118px;
  margin: 0 auto;
}

.guardian-container {
  overflow: hidden;
}

.unit {
  float: left;
  width: 265px;
  padding: 5px 0 5px 5px;
  margin: 5px 5px 0 5px;
  overflow: hidden;
  border: solid 1px #eee;
  -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
          border-radius: 5px;
}

.first {
  margin-left: 0!important;
}

.last {
  margin-right: 0!important;
}

.select-row {
  height: 30px;
}

.select-header {
  float: left;
  width: 74px;
  height: 25px;
  font-weight: 700;
  color: #333;
}

.select {
  width: 185px;
}

.data-row {
  margin-top: 10px;
}

.stat-row {
  height: 20px;
  padding: 0;
  margin: 5px 0;
  clear: both;
  list-style: none;
}

.stat-label {
  display: inline-block;
  float: left;
  width: 24px;
  margin-top: 5px;
  font-size: 12px;
  font-weight: 700;
  line-height: 14px;
  color: #333;
}

.stat-value {
  display: inline-block;
  float: left;
  width: 38px;
  text-align: right;
  -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
          border-radius: 3px;
}

.stat-header {
  width: 47px;
  height: 30px;
  font-size: 12px;
  font-weight: 700;
  line-height: 14px;
  color: #333;
  text-align: center;
  background-color: #fff!important;
}

.base {
  padding: 1px 4px 2px 0;
  margin-left: 3px;
  background-color: #eee;
  border: solid 1px #fff;
}

.type {
  padding: 1px 4px 2px 0;
  margin-left: 3px;
  background-color: #eee;
  border: solid 1px #ddd;
}

.cool {
  padding: 1px 4px 2px 0;
  margin-left: 3px;
  background-color: #f0f3a2;
  border: solid 1px #fff;
}

.stat {
  padding: 1px 4px 2px 0;
  margin-left: 3px;
  background-color: #f0f3a2;
  border: solid 1px #d0d392;
}

.max {
  padding: 1px 4px 2px 0;
  margin-left: 3px;
  background-color: #f3d0a2;
  border: solid 1px #d3b092;
}

.best-1 {
  font-weight: 700;
  color: #2bad4a!important;
}

.best-2 {
  color: #2bad4a!important;
}

.worst-1 {
  color: #d8503e!important;
}

.link-header {
  height: 22px;
  line-height: 20px;
  padding-left: 5px;
  font-weight: 700;
  color: #0e385f;
  background-color: #d8dfea;
  -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
          border-radius: 3px;
}

.header,
.social,
.legend,
.links,
.programmer {
  margin-top: 8px;
  overflow: hidden;
  clear: both;
}

.links a,
.links a:visited,
.programmer a,
.programmer a:visited {
  font-size: 12px;
  color: #0e385f;
  text-decoration: none;
}

.programmer {
  margin-bottom: 10px;
}

.legend dl {
  margin: 0 0 0 40px;
  font-size: 12px;
}

.legend dt {
  float: left;
  width: 69px;
  clear: left;
}

.legend dd {
  float: left;
  margin: 0;
}

.links ul {
  margin: 0;
  list-style: none;
}

.version-info {
  margin-left: 40px;
  font-size: 12px;
}

@media screen and (max-width: 584px) {
  .container {
    width: 272px;
  }
  .first {
    margin-right: 0!important;
  }
  .unit-2 {
    margin-left: 0!important;
  }
  .legend dl,
  .version-info {
    margin-left: 20px;
  }
  .links ul {
    padding-left: 20px;
  }
  .unit-3,
  .unit-4 {
    display: none;
  }
}

@media screen and (min-width: 585px) and (max-width: 862px) {
  .container {
    width: 554px;
  }
  .unit-2 {
    margin-right: 0!important;
  }
  .unit-3,
  .unit-4 {
    display: none;
  }
}

@media screen and (min-width: 863px) and (max-width: 1140px) {
  .container {
    width: 836px;
  }
  .unit-3 {
    margin-right: 0!important;
  }
  .unit-4 {
    display: none;
  }
}

